# two-sockets

./: .gitignore  CMakeLists.txt  readme.md
client/: Makefile  main.cpp
server/: Makefile  buffer.cpp  buffer.hpp  functions.cpp  functions.hpp  main.cpp
src/client/: client_app.hpp  main.cpp
src/server/: main.cpp  server_app.hpp
utils/: buffer.hpp  functions.hpp  log.hpp
